--- a/Travel/Popular/PopularTableViewCell.xib
+++ b/Travel/Popular/PopularTableViewCell.xib
@@ -4,20 +4,38 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PopularTableViewCell" id="KGk-i7-Jjw" customClass="PopularTableViewCell" customModule="Travel" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PopularTableViewCell" rowHeight="165" id="KGk-i7-Jjw" customClass="PopularTableViewCell" customModule="Travel" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLW-sj-SUk">
+                        <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="MLW-sj-SUk" secondAttribute="bottom" id="2mc-8E-gBV"/>
+                    <constraint firstItem="MLW-sj-SUk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="98k-Dd-mrK"/>
+                    <constraint firstItem="MLW-sj-SUk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="M2G-I8-AEO"/>
+                    <constraint firstAttribute="trailing" secondItem="MLW-sj-SUk" secondAttribute="trailing" id="zmL-zR-a14"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="37" y="-12"/>
+            <point key="canvasLocation" x="125.95419847328243" y="29.929577464788736"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
