--- a/Travel/Popular/PopularTableViewCell.xib
+++ b/Travel/Popular/PopularTableViewCell.xib
@@ -30,6 +30,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="imageWrappedView" destination="MLW-sj-SUk" id="H4S-Dv-tgN"/>
+            </connections>
             <point key="canvasLocation" x="125.95419847328243" y="29.929577464788736"/>
         </tableViewCell>
     </objects>
