--- a/Travel/Base.lproj/Main.storyboard
+++ b/Travel/Base.lproj/Main.storyboard
@@ -214,14 +214,28 @@ Gw
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Kuf-te-Uaz">
-                                <rect key="frame" x="0.0" y="162" width="393" height="690"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kuf-te-Uaz">
+                                <rect key="frame" x="20" y="237" width="353" height="615"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9hK-jr-kog">
+                                <rect key="frame" x="20" y="172" width="353" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="6FR-Tp-lKB"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="U2l-Ll-WJU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Kuf-te-Uaz" firstAttribute="top" secondItem="9hK-jr-kog" secondAttribute="bottom" constant="5" id="Hvt-uT-xu1"/>
+                            <constraint firstAttribute="trailing" secondItem="Kuf-te-Uaz" secondAttribute="trailing" constant="20" id="Jh2-gh-PGi"/>
+                            <constraint firstItem="9hK-jr-kog" firstAttribute="top" secondItem="U2l-Ll-WJU" secondAttribute="top" constant="10" id="S3M-a9-h4d"/>
+                            <constraint firstItem="Kuf-te-Uaz" firstAttribute="leading" secondItem="U2l-Ll-WJU" secondAttribute="leading" constant="20" id="gGT-BE-FPT"/>
+                            <constraint firstItem="9hK-jr-kog" firstAttribute="leading" secondItem="U2l-Ll-WJU" secondAttribute="leading" constant="20" id="hs5-WW-YTL"/>
+                            <constraint firstItem="Kuf-te-Uaz" firstAttribute="bottom" secondItem="9WP-dZ-aTx" secondAttribute="bottom" id="rEu-CL-B6s"/>
+                            <constraint firstItem="U2l-Ll-WJU" firstAttribute="trailing" secondItem="9hK-jr-kog" secondAttribute="trailing" constant="20" id="z9j-cv-fE0"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lVC-Qm-v3t"/>
                     <connections>
