--- a/Travel/Popular/PopularTableViewCell.xib
+++ b/Travel/Popular/PopularTableViewCell.xib
@@ -19,7 +19,42 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLW-sj-SUk">
                         <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9fB-vc-uQr">
+                                <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHA-1x-TeR">
+                                <rect key="frame" x="16" y="20" width="405" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="tlP-65-gva"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFX-pg-D3m">
+                                <rect key="frame" x="16" y="135" width="405" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3DY-Jw-J24"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dFX-pg-D3m" firstAttribute="leading" secondItem="MLW-sj-SUk" secondAttribute="leading" constant="16" id="5Kb-Ta-eIR"/>
+                            <constraint firstAttribute="trailing" secondItem="9fB-vc-uQr" secondAttribute="trailing" id="8Kv-1G-MX4"/>
+                            <constraint firstItem="9fB-vc-uQr" firstAttribute="leading" secondItem="MLW-sj-SUk" secondAttribute="leading" id="Eni-Xc-q8n"/>
+                            <constraint firstAttribute="bottom" secondItem="dFX-pg-D3m" secondAttribute="bottom" id="HQd-8w-nBl"/>
+                            <constraint firstItem="9fB-vc-uQr" firstAttribute="top" secondItem="MLW-sj-SUk" secondAttribute="top" id="Zla-13-GCW"/>
+                            <constraint firstAttribute="bottom" secondItem="9fB-vc-uQr" secondAttribute="bottom" id="adt-48-xxq"/>
+                            <constraint firstItem="VHA-1x-TeR" firstAttribute="top" secondItem="MLW-sj-SUk" secondAttribute="top" constant="20" id="cDA-Rl-9H6"/>
+                            <constraint firstAttribute="trailing" secondItem="VHA-1x-TeR" secondAttribute="trailing" constant="16" id="mlu-pW-fPR"/>
+                            <constraint firstItem="VHA-1x-TeR" firstAttribute="leading" secondItem="MLW-sj-SUk" secondAttribute="leading" constant="16" id="mqX-H4-eao"/>
+                            <constraint firstAttribute="trailing" secondItem="dFX-pg-D3m" secondAttribute="trailing" constant="16" id="wdg-N7-rPn"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <constraints>
@@ -31,6 +66,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="cityLabel" destination="VHA-1x-TeR" id="66Z-a5-yzV"/>
+                <outlet property="cityimage" destination="9fB-vc-uQr" id="B0h-KF-pDv"/>
+                <outlet property="explainLabel" destination="dFX-pg-D3m" id="U0h-PT-fmJ"/>
                 <outlet property="imageWrappedView" destination="MLW-sj-SUk" id="H4S-Dv-tgN"/>
             </connections>
             <point key="canvasLocation" x="125.95419847328243" y="29.929577464788736"/>
