--- a/Travel/Popular/PopularTableViewCell.xib
+++ b/Travel/Popular/PopularTableViewCell.xib
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLW-sj-SUk">
-                        <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
+                        <rect key="frame" x="5" y="5" width="427" height="155"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9fB-vc-uQr">
-                                <rect key="frame" x="0.0" y="0.0" width="437" height="165"/>
+                                <rect key="frame" x="0.0" y="0.0" width="427" height="155"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHA-1x-TeR">
-                                <rect key="frame" x="16" y="20" width="405" height="60"/>
+                                <rect key="frame" x="16" y="0.0" width="395" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="tlP-65-gva"/>
                                 </constraints>
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFX-pg-D3m">
-                                <rect key="frame" x="16" y="135" width="405" height="30"/>
+                                <rect key="frame" x="16" y="125" width="395" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3DY-Jw-J24"/>
                                 </constraints>
@@ -48,9 +48,9 @@
                             <constraint firstAttribute="trailing" secondItem="9fB-vc-uQr" secondAttribute="trailing" id="8Kv-1G-MX4"/>
                             <constraint firstItem="9fB-vc-uQr" firstAttribute="leading" secondItem="MLW-sj-SUk" secondAttribute="leading" id="Eni-Xc-q8n"/>
                             <constraint firstAttribute="bottom" secondItem="dFX-pg-D3m" secondAttribute="bottom" id="HQd-8w-nBl"/>
+                            <constraint firstItem="VHA-1x-TeR" firstAttribute="top" secondItem="MLW-sj-SUk" secondAttribute="top" id="QRo-kW-9dG"/>
                             <constraint firstItem="9fB-vc-uQr" firstAttribute="top" secondItem="MLW-sj-SUk" secondAttribute="top" id="Zla-13-GCW"/>
                             <constraint firstAttribute="bottom" secondItem="9fB-vc-uQr" secondAttribute="bottom" id="adt-48-xxq"/>
-                            <constraint firstItem="VHA-1x-TeR" firstAttribute="top" secondItem="MLW-sj-SUk" secondAttribute="top" constant="20" id="cDA-Rl-9H6"/>
                             <constraint firstAttribute="trailing" secondItem="VHA-1x-TeR" secondAttribute="trailing" constant="16" id="mlu-pW-fPR"/>
                             <constraint firstItem="VHA-1x-TeR" firstAttribute="leading" secondItem="MLW-sj-SUk" secondAttribute="leading" constant="16" id="mqX-H4-eao"/>
                             <constraint firstAttribute="trailing" secondItem="dFX-pg-D3m" secondAttribute="trailing" constant="16" id="wdg-N7-rPn"/>
@@ -58,10 +58,10 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="MLW-sj-SUk" secondAttribute="bottom" id="2mc-8E-gBV"/>
-                    <constraint firstItem="MLW-sj-SUk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="98k-Dd-mrK"/>
-                    <constraint firstItem="MLW-sj-SUk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="M2G-I8-AEO"/>
-                    <constraint firstAttribute="trailing" secondItem="MLW-sj-SUk" secondAttribute="trailing" id="zmL-zR-a14"/>
+                    <constraint firstAttribute="bottom" secondItem="MLW-sj-SUk" secondAttribute="bottom" constant="5" id="MKm-NW-Rg9"/>
+                    <constraint firstItem="MLW-sj-SUk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="eLF-yN-hs9"/>
+                    <constraint firstItem="MLW-sj-SUk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="uCX-I6-s7I"/>
+                    <constraint firstAttribute="trailing" secondItem="MLW-sj-SUk" secondAttribute="trailing" constant="5" id="z2T-pg-Ou5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
